Fix S3 upload panic on CPUs without pclmulqdq

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -268,6 +268,7 @@ inherits = "release"
 strip = "debuginfo"
 
 [patch.crates-io]
+crc-fast = { path = "third_party/crc-fast" }
 prometheus = { git = "https://github.com/get-convex/rust-prometheus", rev = "8794d2bbf2a5a9adc501067ee4440dde6b5e6e25" }
 tokio-postgres = { git = "https://github.com/get-convex/rust-postgres", rev = "5751201b0fe9f8b1f0a1812fb04e21c5469ad0c6" }
 postgres-protocol = { git = "https://github.com/get-convex/rust-postgres", rev = "5751201b0fe9f8b1f0a1812fb04e21c5469ad0c6" }
